--- a/Advent_Kalender.html
+++ b/Advent_Kalender.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
+<head style="background-color: white;">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Leas Adventskalender</title>
+    <link rel="stylesheet" href="setup.css">
+</head>
+<body style="background-color: aliceblue; padding: 10px">
+    <header style="background-color: white; padding: 20px;">
+        <h1>Herzlich willkommen zu dem krassen Adventskalender von Jannik für Lea!</h1>
 
+
+        <nav style="background-color: rgb(253, 246, 237); padding: 5px">
+            <p>Hier gibt es jeden Tag tolle und spaßige Rätsel, und alles andere was mir sonst noch so einfällt</p>
+        </nav>
+        
+    </header>
+
+    <main style="background-color: white; padding: 20px;">
+        <article style="background-color: rgb(253, 216, 216); padding: 5px;">
+            <ol>
+                <li><a href="Days/1.html">.Advent</a></li>
+                <li><a href="Days/2.html">.Advent</a></li>
+            </ol>
+        </article>
+    </main>
+
+    
+</body>
+</html>
