--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
-
 <!DOCTYPE html>
-<html lang="de">
-<head>
+<html lang="en">
+<head style="background-color: white;">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>uebermich</title>
+    <title>Leas Adventskalender</title>
+    <link rel="stylesheet" href="setup.css">
 </head>
-<body>
-    <h1>Das bin ich:</h1>
-    <p>Ich bin Jannik Sensenberger, 16 Jahre alt und besuche die <a href="https://www.htl-grieskirchen.at/wp/">HTL Grieskirchen</a></p>
-    <img src="img/Das bin ich.jpg" alt="Jannik Sensenberger">
-    <p>Ich wohne in Ried im Innkreis in der Eiselsbergstraße 6 mit meiner Familie und unseren 2 Hunden.</p>
-    <h2>Lebenslauf:</h2>
-    <p>Ich bin am 6.6.2009 in Ried geboren. In meinem Vierten Lebensjahr startete ich in dem Kindergarten Raimundstraße und Verbrachte dort Zwei Jahre
-        Die folgenden 9 Jahre verbrachte ich in der Bildungswerkstadt Knittlingerhof.
-        Mit dem Alter von 15 Jahren wechselte ich dann in die HTL Grieskirchen und besuche gerade die Zweite Klasse.
-    </p>
-    <p>hier geht es zu meinen <a href="hobbys.html">Hobbys</a></p>
+<body style="background-color: aliceblue; padding: 10px">
+    <header style="background-color: white; padding: 20px;">
+        <h1>Herzlich willkommen zu dem krassen Adventskalender von Jannik für Lea!</h1>
+
+
+        <nav style="background-color: rgb(253, 246, 237); padding: 5px">
+            <p>Hier gibt es jeden Tag tolle und spaßige Rätsel, und alles andere was mir sonst noch so einfällt</p>
+        </nav>
+        
+    </header>
+
+    <main style="background-color: white; padding: 20px;">
+        <article style="background-color: rgb(253, 216, 216); padding: 5px;">
+            <ol>
+                <li><a href="1.html">.Advent</a></li>
+                <li><a href="2.html">.Advent</a></li>
+            </ol>
+        </article>
+    </main>
+
+    
 </body>
 </html>
